# exaterm

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  appkit-ui-glasscheck-plan.md  gtk-ui-glasscheck-plan.md
crates/exaterm/: Cargo.toml
crates/exaterm-core/: Cargo.toml
crates/exaterm-core/src/: daemon.rs  headless_terminal.rs  lib.rs  model.rs  observation.rs  procfs.rs  proto.rs  runtime.rs  supervision.rs  synthesis.rs  terminal_stream.rs
crates/exaterm-core/tests/: workspace_state.rs
crates/exaterm-gtk/: Cargo.toml
crates/exaterm-gtk/src/: actions.rs  lib.rs  main.rs  terminal_adapter.rs  test_support.rs  ui.rs
crates/exaterm-macos/: Cargo.toml
crates/exaterm-macos/src/: app_delegate.rs  battlefield_view.rs  empty_state_view.rs  focus_view.rs  key_dispatch.rs  key_monitor.rs  lib.rs  main.rs  style.rs  terminal_view.rs  test_support.rs  window.rs  workspace_support.rs
crates/exaterm-macos/tests/: visual_tests.rs
crates/exaterm-macos/tests/helpers/: mod.rs
crates/exaterm-swiftterm/: Cargo.toml  build.rs
crates/exaterm-swiftterm/src/: lib.rs
crates/exaterm-test-util/: Cargo.toml
crates/exaterm-test-util/src/: appkit_harness.rs  capture.rs  lib.rs  pixel_compare.rs
crates/exaterm-types/: Cargo.toml
crates/exaterm-types/src/: model.rs  proto.rs  synthesis.rs
crates/exaterm-ui-tests/: Cargo.toml
crates/exaterm-ui-tests/tests/: ui_glasscheck.rs
crates/exaterm-ui/src/: app_state.rs  css.rs  layout.rs  lib.rs  supervision.rs  theme.rs  ui_test_contract.rs
crates/exaterm-ui/test_fixtures/: README.md  claude_session.expected.txt
crates/exaterm/src/: beachhead.rs  display_runtime.rs  layout.rs  main.rs  remote.rs  style.rs  supervision.rs  terminal_adapter.rs  ui.rs  widgets.rs  workspace_view.rs
crates/exatermd/: Cargo.toml
crates/exatermd/src/: main.rs
docs/: ux-spec.md
judgement/: app.md  target.yaml
scripts/: package-macos.sh
src/: demo.rs  lib.rs  main.rs  model.rs  procfs.rs  supervision.rs  synthesis.rs  ui.rs
tests/: workspace_state.rs
