[package]
name = "exaterm"
version = "0.1.0"
edition = "2021"

[dependencies]
gio = "0.21"
glib = "0.21"
gtk = { package = "gtk4", version = "0.10", features = ["v4_20"] }
libadwaita = { version = "0.8.0", features = ["gtk_v4_20", "v1_8"] }
proc-macro-crate = "=3.3.0"
vte4 = { version = "0.9.0", features = ["v0_78"] }

[build-dependencies]
system-deps = "=7.0.3"
