[workspace]
members = [
    "crates/exaterm-types",
    "crates/exaterm-core",
    "crates/exaterm-ui",
    "crates/exaterm-gtk",
    "crates/exaterm-ui-tests",
    "crates/exaterm-macos",
    "crates/exaterm-swiftterm",
    "crates/exatermd",
    "crates/exaterm-test-util",
]
default-members = [
    "crates/exaterm-types",
    "crates/exaterm-core",
    "crates/exaterm-ui",
    "crates/exaterm-gtk",
    "crates/exaterm-macos",
    "crates/exaterm-swiftterm",
    "crates/exatermd",
]
resolver = "2"
