[package]
name = "exaterm-gtk"
version = "0.1.0"
edition = "2021"

[features]
default = []
test-support = ["dep:glasscheck"]

[lib]
name = "exaterm_gtk"
path = "src/lib.rs"

[dependencies]
exaterm-types = { path = "../exaterm-types" }
exaterm-core = { path = "../exaterm-core" }
exaterm-ui = { path = "../exaterm-ui" }
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
gio = "0.21"
glib = "0.21"
glasscheck = { git = "https://github.com/djspiewak/glasscheck.git", rev = "f71da71f60d318c213c6c17fd51c55ff684b4104", features = ["gtk"], optional = true }
gtk = { package = "gtk4", version = "0.10", features = ["v4_20"] }
libc = "0.2"
libadwaita = { version = "0.8.0", features = ["gtk_v4_20", "v1_8"] }
pangocairo = "0.21.5"
vte4 = { version = "0.9.0", features = ["v0_78"] }

[target.'cfg(target_os = "linux")'.build-dependencies]
system-deps = "=7.0.3"
