[package]
name = "exaterm-macos"
version = "0.1.0"
edition = "2021"

[features]
default = ["swiftterm"]
swiftterm = ["dep:exaterm-swiftterm"]
test-support = ["dep:glasscheck"]

[lib]
name = "exaterm_macos"
path = "src/lib.rs"

[[bin]]
name = "exaterm-macos"
path = "src/main.rs"
required-features = ["swiftterm"]

[dependencies]
exaterm-types = { path = "../exaterm-types" }
exaterm-core = { path = "../exaterm-core" }
exaterm-ui = { path = "../exaterm-ui" }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
exaterm-swiftterm = { path = "../exaterm-swiftterm", optional = true }
glasscheck = { git = "https://github.com/djspiewak/glasscheck.git", rev = "31d682f9c94e285659b282b5881ca9468a0fb736", features = ["appkit"], optional = true }
libc = "0.2"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSRunLoop",
    "NSTimer",
    "NSDate",
    "NSString",
    "NSArray",
    "NSThread",
    "NSProcessInfo",
    "NSNotification",
    "NSDictionary",
    "NSAttributedString",
    "block2",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSAlert",
    "NSApplication",
    "NSRunningApplication",
    "NSWindow",
    "NSButton",
    "NSView",
    "NSColor",
    "NSControl",
    "NSFont",
    "NSFontDescriptor",
    "NSEvent",
    "NSMenu",
    "NSMenuItem",
    "NSPasteboard",
    "NSTextField",
    "NSScrollView",
    "NSResponder",
    "NSAppearance",
    "NSGraphics",
    "NSGraphicsContext",
    "NSAttributedString",
    "NSBezierPath",
    "NSGradient",
    "NSShadow",
    "NSStringDrawing",
    "block2",
] }
objc2-core-foundation = "0.3"

[dev-dependencies]
exaterm-test-util = { path = "../exaterm-test-util", features = ["appkit"] }

[[test]]
name = "visual_tests"
harness = false
