[package]
name = "exaterm-swiftterm"
version = "0.1.0"
edition = "2024"

[dependencies]
exaterm-ui = { path = "../exaterm-ui" }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSView", "NSColor", "NSFont", "NSResponder"] }
objc2-foundation = "0.3"
